language/move-lang/tests/move_check/typing/type_variable_join_single_unpack_invalid.exp
error[E04007]: incompatible types
   ┌─ tests/move_check/typing/type_variable_join_single_unpack_invalid.move:11:14
   │
10 │         (f1: u64);
   │              --- Given: 'u64'
11 │         (f2: bool);
   │              ^^^^
   │              │
   │              Invalid type annotation
   │              Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/type_variable_join_single_unpack_invalid.move:14:14
   │
13 │         (f1: Box<u64>);
   │                  --- Given: 'u64'
14 │         (f2: Box<bool>);
   │              ^^^^^^^^^
   │              │   │
   │              │   Expected: 'bool'
   │              Invalid type annotation

